--- a/style.css
+++ b/style.css
@@ -11,18 +11,28 @@ body{
     background: #080808;
     color: #fff;
 }
-#header{
-    width: 100%;
-    height: 100vh;
-    background-image: url(./bg\ photo.png);
-    background-size: 550px;
-    background-repeat: no-repeat; 
-    background-position: right;
-    background-attachment: fixed;
-}
+
 .container{
     padding: 10px 7%;
+}
+.parent {
+    display: flex;
+    justify-content: space-between;
+    width: 500px; 
+    padding: 10px;
+    
+margin-left: 200px;
 
+  }
+  .child {
+    width: 80%px;
+     padding: 100px;
+   }
+.profile img{
+    height: 400px;
+    width: 400px;
+    border-radius: 50%;
+    border: 4px solid white;
 }
 nav{
     display: flex;
@@ -59,17 +69,17 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .head-text{
-    margin-top: 20%;
+    margin-top: 5%;
     font-size: 30px;
+    width: 3000px;
 }
 .head-text h1{
     margin-top: 2%;
-    font-size: 60px;
+    font-size: 50px;
 }
 .head-text h1 span {
     color: #ff004f;
 }
-
 
 
 /* about */
